--- a/app/backend/.env
+++ b/app/backend/.env
@@ -4,8 +4,8 @@ REDIS_HOST=redis
 REDIS_PORT=6379
 REDIS_DB=0
 
-OAUTH2_CLIENT_ID=Ov23liqLLqx4ZkVSh45i
-OAUTH2_CLIENT_SECRET=5243ab470ca4a72b5043e894b5dea938ba631b48
+OAUTH2_CLIENT_ID=""
+OAUTH2_CLIENT_SECRET=""
 OAUTH2_REDIRECT_URI=http://localhost:8000/auth/callback
 OAUTH2_AUTHORIZATION_URL=https://github.com/login/oauth/authorize
 OAUTH2_TOKEN_URL=https://github.com/login/oauth/access_token
