--- a/app/backend/.env
+++ b/app/backend/.env
@@ -1,3 +1,10 @@
 # Resolved .env file
 DATABASE_URL=postgresql://user:newpassword@localhost:5432/authservice
 SECRET_KEY=your-secret-key
+
+# Email Settings
+# MAIL_USERNAME=vigneshwarank678@gmail.com
+# MAIL_PASSWORD=wuak nugc conq zfhg
+# MAIL_FROM=vigneshwarank678@gmail.com
+# MAIL_PORT=465
+# MAIL_SERVER=smtp.gmail.com
